# python-leaguepedia-db

./: README.md  setup.cfg
src/leaguepediadb/: __init__.py  dbapi.py
