[metadata]
name = python-leaguepedia-db
version = attr: src.leaguepediadb.__version__
description = Python DB-API Adaptor for Leaguepedia
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kyujin-cho/pyhton-leaguepedia-db
author = Kyujin Cho
author_email = thy2134@gmail.com
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development
project_urls =
    Documentation = https://github.com/kyujin-cho/pyhton-leaguepedia-db
    Source = https://github.com/kyujin-cho/pyhton-leaguepedia-db
    Tracker = https://github.com/kyujin-cho/pyhton-leaguepedia-db/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9
setup_requires =
    setuptools>=51.1.1
    wheel>=0.36.2
install_requires =
    mwclient~=0.10.1
    mo-sql-parsing~=8.145.22062
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.36.2
    twine>=3.4.1
test =
    pytest~=6.2.5
    pytest-asyncio~=0.16.0
    pytest-cov>=2.11
    pytest-mock>=3.5.0
    codecov
dev =
lint =
    flake8>=4.0.1
    flake8-commas>=2.1
typecheck =
    mypy>=0.930

[options.packages.find]
where = src
include = leaguepediadb.*

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W503,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs

[mypy]
ignore_missing_imports = true
mypy_path = src
namespace_packages = true
explicit_package_bases = true

[yapf]
based_on_style = facebook
spaces_before_comment = 2
column_limit = 105
blank_line_before_nested_class_or_def = true
